Added an Image Preview

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
                 <p class="prop-title">Image</p>
                 <button id="upload-btn">Upload Image</button>
                 <input type="file" id="image-uploader" style="display:none;"> 
+                <div class="image-preview-container" id="image-preview-container">
+                    <img src="./assets/img/img1.jpg" alt="" class="image-preview">
+                    <img src="./assets/img/img2.jpg" alt="" class="image-preview">
+                    <img src="./assets/img/img3.jpg" alt="" class="image-preview">
+                    <img src="./assets/img/img4.jpg" alt="" class="image-preview">
+                </div>
             </div>
             <div class="prop-item">
                 <p class="prop-title">Text</p>
@@ -23,6 +29,10 @@
                     <select id="text_font">
                         <option value="">Select Font Type</option>
                         <option value="serif">Serif</option>
+                        <option value="Hurricane">Hurricane</option>
+                        <option value="Inter">Inter</option>
+                        <option value="Ramaraja">Ramaraja</option>
+                        <option value="Roboto">Roboto</option>
                     </select>
                     <div>
                         <label for="text_boldness">Bold</label>
